# fastapi-template

./: .env.example  Dockerfile  Pipfile  README.md  docker-compose-local.yml  docker-compose-test.yml  docker-compose.yml  locustfile.py  pyproject.toml  requirements.in  requirements.txt
app/: backend_pre_start.py  entrypoint.sh  gunicorn.conf.py  logging_setup.py  main.py
app/api/dependencies/: database.py  docs_security.py  pagination.py
app/api/v1/: __init__.py  blog_post.py
app/core/: config.py
app/db/: base_class.py  session.py
app/db/crud/: base.py  blog_post.py
app/db/migrations/: README.md  env.py
app/db/migrations/versions/: 450cad17dfa2_initial.py  8d7ac6d49b3c_initial.py  b1fe0f0de214_initial.py
app/db/tables/: blog_post.py
app/schemas/: base.py  blog_post.py  pagination.py
tests/: conftest.py  setup_env.py  test_blog_post.py  utils.py
tests/factory/: base_factories.py  blog_post_factory.py
